--- a/QnA/templates/index.html
+++ b/QnA/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "bootstrap/base.html" %}
+{% from "_macros.html" import render_field with context %}
 
 {% block head %}
 {{super()}}
@@ -15,35 +16,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 {% endblock %}
-
-{% macro render_field(field) %}
-    <div>
-        {% if field.type != "HiddenField" %}
-            {{ field.label(class_="form-check-label") }}
-        {% endif %}
-      
-        {# following input autocomplete guides #}
-        {% if field.id == "newPassword" or field.id == "confirm" %}
-            {{ field(class_="form-control border", autocomplete="new-password", **kwargs)|safe }}
-        {% elif field.id == "password" %}
-            {{ field(class_="form-control border", autocomplete="current-password", **kwargs)|safe }}
-        {% elif field.name == "username" %}
-            {{ field(class_="form-control border", autocomplete="username", **kwargs)|safe }}
-        {% elif field.type == "BooleanField" %}
-            {{ field(class_="form-check-input border", **kwargs)|safe }}
-        {% else %}
-            {{ field(class_="form-control border", **kwargs)|safe }}
-        {% endif %}
-      
-        {% if field.errors %}
-        <ul class=errors>
-            {% for error in field.errors %}
-            <li>{{ error }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-    </div>
-{% endmacro %}
 
 {% block title %} QnA {% endblock %}
 
