--- a/QnA/templates/_macros.html
+++ b/QnA/templates/_macros.html
@@ -10,6 +10,12 @@
             {% set class_ = "form-control border" %}
         {% endif %}
       
+        {% if "classaddon" in kwargs %}
+            {# Use "classaddon" only if you want to extend the default class.
+               Do not use "classaddon" with "class_" #}
+            {% set class_ = class_ ~ ' ' + kwargs.pop('classaddon') %}
+        {% endif %}
+      
         {{ field(class_=class_, **kwargs)|safe }}
       
         {% if field.errors %}
