fixed and verified that tagging of qns is safely imported to database

--- a/QnA/templates/tag.html
+++ b/QnA/templates/tag.html
@@ -9,7 +9,7 @@
 <script>
 var allTitles = {};
 {% for documentID in allPaperTitles %}
-    allTitles[{{ documentID }}] = {{ allPaperTitles[documentID] }};
+    allTitles[{{ documentID }}] = {{ allPaperTitles[documentID]|safe }};
 {% endfor %}
 </script>
 {% endblock %}
