--- a/QnA/templates/tag.html
+++ b/QnA/templates/tag.html
@@ -11,6 +11,11 @@ var allTitles = {};
 {% for documentID in allPaperTitles %}
     allTitles[{{ documentID }}] = {{ allPaperTitles[documentID]|safe }};
 {% endfor %}
+ window.onload = function(){
+     setUpImageTypeSelect();
+     var selectedDoc = parseInt(document.getElementById('tag-questionDoc').value);
+     setUpPaperSelect(allTitles[selectedDoc]);
+ };
 </script>
 {% endblock %}
 
@@ -28,6 +33,7 @@ var allTitles = {};
         {{ render_field(form.year, classaddon="question") }}
         {{ render_field(form.paper, classaddon="question") }}
         {{ render_field(form.questionDocument, class_="form-select answer") }}
+        {{ render_field(form.paperSelect, class_="form-select answer") }}
         {{ render_field(form.questionNo) }}
         {{ render_field(form.questionPart) }}
         <button type="submit" class="btn btn-primary">Confirm</button>
