--- a/QnA/templates/template.html
+++ b/QnA/templates/template.html
@@ -33,7 +33,7 @@
             {% if current_user.is_authenticated %}
                 <li class="nav-item active ms-2"><a class="nav-link" href="/home">Home</a></li>
                 <li class="nav-item ms-2"><a class="nav-link" href="/manage">Manage</a></li>
-                <li class="nav-item ms-2"><a class="nav-link" href="/account">Account</a></li>
+                <li class="nav-item ms-2"><a class="nav-link" href="/library">Library</a></li>
                 <li class="nav-item ms-2"><a class="nav-link" href="/logout">Logout</a></li>
             {% else %}
                 <li class="nav-item ms-2"><a class="nav-link" href="/">Login</a></li>
