--- a/QnA/templates/library.html
+++ b/QnA/templates/library.html
@@ -21,9 +21,10 @@
             <div id="collapseWksheets" class="accordion-collapse collapse" aria-labelledby="headingWksheets">
                 {% for wk in worksheets %}
                 <form action="/worksheet_editor" method="GET">
+                    <input type="hidden" value="{{ wk.id }}" name="wksheetId" id="wksheetId"></input>
                     <button type="submit" class="accordion-body border-bottom btn btn-default btn-outline-light w-100">
                         <div class="preview_container">
-                        {% if prev_image != None %}
+                        {% if prev_image is not none %}
                             <img class="img-thumbnail" src="{{ prev_image }}">
                         {% endif %}
                         </div>
