fixed bug where WorksheetsQuestions do not update when an annotation is deleted

--- a/QnA/templates/library.html
+++ b/QnA/templates/library.html
@@ -24,7 +24,7 @@
                     <input type="hidden" value="{{ wk.id }}" name="wksheetId" id="wksheetId"></input>
                     <button type="submit" class="accordion-body border-bottom btn btn-default btn-outline-light w-100">
                         <div class="preview_container">
-                        {% if prev_image is not none %}
+                        {% if preview_image is not none %}
                             <img class="img-thumbnail" src="{{ prev_image }}">
                         {% endif %}
                         </div>
