Added text, image at homepage

--- a/QnA/templates/index.html
+++ b/QnA/templates/index.html
@@ -28,7 +28,7 @@
         <img src="{{ url_for('static', filename='images/exampleRun.png') }}">
         <div id="infoImageText">
             <h3 class="sectiontitle"> QnA </h3>
-            <p> Write Text here...</p>
+            <p> All your QnAs in one place...</p>
         </div>
     </div>
     <div id="loginformdiv" class="form-group">
