--- a/QnA/templates/editor.html
+++ b/QnA/templates/editor.html
@@ -28,6 +28,16 @@ window.onload = function(){
             window.location.reload(); 
         });
     })
+    document.getElementById("insert").addEventListener("click", function(e) {
+        document.getElementById("insert").disabled = true;
+        document.getElementById("delete").disabled = false;
+        editMode = 1;
+    });
+    document.getElementById("delete").addEventListener("click", function(e) {
+        document.getElementById("insert").disabled = false;
+        document.getElementById("delete").disabled = true;
+        editMode = 0;
+    });
     // document = [documentName, [(pageID, pageNo, databaseName), ...], documentID]
     objects['_currDocumentID'] = {{document[2]}};
     console.log("{{document[0]}}");
@@ -36,6 +46,8 @@ window.onload = function(){
     var canvasID = "page-{{document[1][pageNum - 1][0]}}";
     var baseImageDir = "static/pages/{{document[1][pageNum - 1][2]}}";
     var annotations = {{ annotations|tojson }};
+    document.getElementById("insert").disabled = false;
+    document.getElementById("delete").disabled = true;
     prepareCanvas(canvasID, baseImageDir, annotations);
 }
 </script>
@@ -45,7 +57,6 @@ window.onload = function(){
 {% block content %}
 
 <div class="container">
-    <p id="edit_mode_display">Insertion</p>
     {% set pages = document[1] %}
     {% set documentName = document[0] %}
     {% for j in range(pages | length) %}
@@ -57,9 +68,17 @@ window.onload = function(){
             <p>Page {{pages[j][1]}} of {{documentName}}</p>
         {% endif %}
     {% endfor %}
-    <button id="nextPage" type="button" class="btn btn-primary"> Next Page </button>
-    <button id="prevPage" type="button" class="btn btn-primary"> Previous Page </button>
-    <button id="submitAnnotations" type="button" class="btn btn-primary"> Submit! </button>
+    <div class="btn-toolbar" role="toolbar">
+        <div class="btn-group me-2" role="group" aria-label="First group">
+            <button id="insert" type="button" class="btn btn-secondary"> Insert </button>
+            <button id="delete" type="button" class="btn btn-secondary"> Delete </button>
+        </div>  
+        <div class="btn-group me-2" role="group" aria-label="Second group">
+            <button id="nextPage" type="button" class="btn btn-primary"> Next Page </button>
+            <button id="prevPage" type="button" class="btn btn-primary"> Previous Page </button>
+            <button id="submitAnnotations" type="button" class="btn btn-primary"> Submit! </button>
+        </div>  
+    </div>  
 </div>
 {% endblock %}
 
